# DEVTools

./: .gitmodules  CMakeLists.txt  DEVTools.code-workspace
settings/: minimal.ini  test.ini
src/: archive.hpp  curl.hpp  main.cpp
third_party_libs/: CMakeLists.txt
third_party_libs/lzma/: lzma.h
